# research-agent

./: .dockerignore  .env.example  .gitignore  README.md  autofit_example.pptx  config.py  docker-compose.yml  paper_scraping.py  paper_scraping_agent.py  prompts.py  pyproject.toml  research_agent.py  slide_gen_agent.py  slide_gen_flows.html  summary_agent.py  summary_gen_flows.html  summary_slide_gen_flows.html  summary_using_images.py  test_arxiv_extraction.ipynb  tools.py  webpack.config.js
backend/: Dockerfile  config.py  main.py  models.py  pyproject.toml
backend/prompts/: prompts.py
backend/services/: embeddings.py  llms.py
backend/utils/: file_processing.py  tokens.py  tools.py  visualization.py
backend/workflows/: events.py  hitl_workflow.py  paper_scraping.py  research_agent.py  schemas.py  slide_gen.py  slide_gen_agent.py  summarize_and_generate_slides.py  summary_agent.py  summary_gen.py  summary_gen_w_qe.py  summary_using_images.py
frontend/: Dockerfile  Home.py  app.py  pyproject.toml
frontend/pages/: hello.py  main_page.py  slide_generation_page.py
frontend/utils/: layout.py
services/: llms.py
src/llamaindex_sample/: minimal.ipynb  rag_dag.html  run_ollama.py  run_pandas_qp.py
src/web_scraping_agent/: agent_crew.ipynb  agent_crewai.ipynb  agent_server.py  autogen.ipynb  crewai.ipynb  example_agents.py  llamaindex.ipynb  test_scrapers.ipynb
src/web_scraping_agent/agents/: base.py  report_gen.py  webpage_crawler.py  webpage_parsing.py
src/web_scraping_agent/llm/: base.py
src/web_scraping_agent/output/: vespa-ai-20240713152719.md  vespa-ai-20240713153936.md  vespa-ai-20240713154501.md
src/web_scraping_agent/prompt/: report_gen.py  web_crawler.py
src/web_scraping_agent/tools/: web_parsing.py
src/web_scraping_agent/utils/: config.py  file_io.py  scraping.py  tokens.py
utils/: file_processing.py
