[tool.poetry]
name = "research-agent"
version = "0.1.0"
description = ""
authors = ["lz-chen <lingzhen.chen@inmeta.no>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyter = "^1.0.0"
scholarly = "^1.7.11"
fake-useragent = "^1.5.1"
free-proxy = "^1.1.1"
python-dotenv = "^1.0.1"
feedparser = "^6.0.11"
pydantic = "^2.8.2"
arxiv = "^2.1.3"
semanticscholar = "^0.8.4"
pydantic-settings = "^2.4.0"
llama-index = "^0.10.65"
click = "^8.1.7"
llama-index-embeddings-azure-openai = "^0.1.11"
llama-index-multi-modal-llms-azure-openai = "^0.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
