[tool.poetry]
name = "research-agent"
version = "0.1.0"
description = ""
authors = ["lz-chen <lingzhen.chen@inmeta.no>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
jupyter = "^1.0.0"
scholarly = "^1.7.11"
fake-useragent = "^1.5.1"
free-proxy = "^1.1.1"
python-dotenv = "^1.0.1"
feedparser = "^6.0.11"
pydantic = "^2.8.2"
arxiv = "^2.1.3"
semanticscholar = "^0.8.4"
pydantic-settings = "^2.4.0"
llama-index = "^0.10.65"
click = "^8.1.7"
llama-index-embeddings-azure-openai = "^0.1.11"
llama-index-multi-modal-llms-azure-openai = "^0.1.4"
llama-parse = "^0.4.9"
qdrant-client = "^1.11.0"
llama-index-vector-stores-qdrant = "^0.2.16"
arxiv2text = "^0.1.14"
unstructured = "^0.15.5"
marker-pdf = "^0.2.16"
llama-index-storage-docstore-redis = "^0.1.2"
llama-index-storage-index-store-redis = "^0.2.0"
pyvis = "^0.3.2"
llama-index-tools-azure-code-interpreter = "^0.2.0"
python-pptx = "^1.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
