[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Backend for the research agent"
authors = ["lz-chen <lingzhen.chen@inmeta.no>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
jupyter = "^1.0.0"
scholarly = "^1.7.11"
fake-useragent = "^1.5.1"
free-proxy = "^1.1.1"
python-dotenv = "^1.0.1"
feedparser = "^6.0.11"
pydantic = "^2.8.2"
arxiv = "^2.1.3"
semanticscholar = "^0.8.4"
pydantic-settings = "^2.4.0"
llama-index = "^0.11.3"
click = "^8.1.7"
llama-index-embeddings-azure-openai = "^0.2.5"
llama-index-multi-modal-llms-azure-openai = "^0.2.0"
llama-parse = "^0.4.9"
qdrant-client = "^1.11.0"
llama-index-vector-stores-qdrant = "^0.3.0"
arxiv2text = "^0.1.14"
unstructured = "^0.15.5"
marker-pdf = "^0.2.16"
llama-index-storage-docstore-redis = "^0.2.0"
llama-index-storage-index-store-redis = "^0.3.0"
pyvis = "^0.3.2"
llama-index-tools-azure-code-interpreter = "^0.3.0"
python-pptx = "^1.0.2"
pymupdf = "^1.24.9"
fastapi = "^0.112.2"
uvicorn = "^0.30.6"
azure-cli= "^2.64.0"
llama-index-tools-tavily-research = "^0.2.0"
mlflow = "^2.16.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
